--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.13.4)
 add_subdirectory(lab1 bin/lab1)
 add_subdirectory(lab2 bin/lab2)
 add_subdirectory(lab3 bin/lab3)
+add_subdirectory(lab4 bin/lab4)
 
