--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(lab2 bin/lab2)
 add_subdirectory(lab3 bin/lab3)
 add_subdirectory(lab4 bin/lab4)
 add_subdirectory(lab5 bin/lab5)
-
+add_subdirectory(lab6 bin/lab6)
